--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -70,8 +70,8 @@
    "outputs": [],
    "source": [
     "#generates a random tree containing the leaves in the list leaves\n",
-    "#Base case:\n",
-    "#\n",
+    "#Base case: for input [leaf] ==> leaf whch is the only posible tree\n",
+    "#Induction: ranPart yields partitions smaller than n+1 therefore if we assume\n",
     "#Halting: calling randPart will eventually produce a set of lists of size > len(leaves)\n",
     "#therefore len(leaves) will eventually reach the stopping case\n",
     "def genRandTree(leaves):\n",
@@ -107,25 +107,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.493\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "total=0\n",
-    "for i in range(0,10000):\n",
-    "    total += random.randint(0,1)\n",
+    "#generates a random binary tree in Newick format\n",
+    "def randNewickBinSubTree(leaves):\n",
+    "    if len(leaves) < 2:\n",
+    "        return str(leaves[0]) + \":1\"\n",
+    "    \n",
+    "    subtree=\"(\"\n",
+    "    for part in randBinPart(leaves):\n",
+    "        subtree += randNewickBinSubTree(part) + \",\"\n",
+    "    \n",
+    "    return subtree[0:-1] + \"):1\"\n",
     "\n",
-    "print(total / 10000)"
+    "def randNewickBinTree(leaves):\n",
+    "    \n",
+    "    if len(leaves) < 2:\n",
+    "        return \"(\" + str(leaves[0]) + \":1\" + \")\"\n",
+    "    \n",
+    "    tree =\"(\"\n",
+    "    for part in randBinPart(leaves):\n",
+    "        tree += randNewickBinSubTree(part) + \",\"\n",
+    "        \n",
+    "    return tree[0:-1] + \")\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#write trees to text file\n",
+    "with open('randtrees','w') as file:\n",
+    "    for i in range(0,10):\n",
+    "        file.write(randNewickBinTree(range(0,10)) + \"\\n\")"
    ]
   },
   {
@@ -173,50 +195,6 @@
    ],
    "source": [
     "genRandBinTree(range(0,10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1, 2, 3], [4, 5, 6, 7], [8, 9, 1, 2]]"
-      ]
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fixedPart([0,1,2,3,4,5,6,7,8,9,1,2],4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1], [2]]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binPart([0,1,2])"
    ]
   },
   {
