--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -63,17 +63,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#functions to perform tree rotations\n",
+    "def rotateLeft(subtree):\n",
+    "    return [[subtree[0],subtree[1][0]],subtree[1][1]] \n",
+    "\n",
+    "def rotateRight(subtree):\n",
+    "    return [subtree[0][0],[subtree[0][1],subtree[1]]]\n",
+    "\n",
+    "#we would like to perform random rotations\n",
+    "#randRotate returns a pair [action,rotated subtree]\n",
+    "def randRotate(subtree):\n",
+    "    #0 - do nothing, 1 - rotate left, 2 - rotate right\n",
+    "    action = random.randint(0,2) \n",
+    "    if  action == 1:\n",
+    "        #rotate right\n",
+    "        #check we can rotate right\n",
+    "        if isinstance(subtree[0],list):\n",
+    "            return [1,[subtree[0][0],[subtree[0][1],subtree[1]]]]\n",
+    "        else:\n",
+    "            return [0,subtree]\n",
+    "    elif action == 2:\n",
+    "        #rotate left\n",
+    "        if isinstance(subtree[1],list):\n",
+    "            return [2,[[subtree[0],subtree[1][0]],subtree[1][1]]]\n",
+    "        else:\n",
+    "            return [0,subtree]\n",
+    "    else:\n",
+    "        return [0,subtree]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#generates a random tree containing the leaves in the list leaves\n",
+    "#generates a random tree containing the leaves in the \"leaves\" list \n",
     "#Base case: for input [leaf] ==> leaf whch is the only posible tree\n",
-    "#Induction: ranPart yields partitions smaller than n+1 therefore if we assume\n",
-    "#Halting: calling randPart will eventually produce a set of lists of size > len(leaves)\n",
-    "#therefore len(leaves) will eventually reach the stopping case\n",
+    "#Induction: ranPart yields partitions smaller than n+1\n",
+    "#it will produce the tree [genRandTree(p1),...,genRandTree(pn)]\n",
+    "#which works by IHOP\n",
+    "#Halting: calling randPart will yield partitions of smaller size\n",
+    "#eventually reachin the base case\n",
     "def genRandTree(leaves):\n",
     "    if len(leaves) < 2:\n",
     "        return leaves[0]\n",
@@ -138,6 +177,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#convert tree to Newick format\n",
+    "def toNewickTree(tree):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "collapsed": false
@@ -148,6 +200,21 @@
     "with open('randtrees','w') as file:\n",
     "    for i in range(0,10):\n",
     "        file.write(randNewickBinTree(range(0,10)) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#TODO\n",
+    "#1 - generate random trees by performing random rotations\n",
+    "#2 - read GTP output file\n",
+    "#3 - create list of random trees that are a known distance away from\n",
+    "#    the first tree in the list"
    ]
   },
   {
