adds functions to perform random SPR operations

--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#convert tree to Newick format\n",
-    "def toNewickTree(tree):\n",
+    "#def toNewickTree(tree):\n",
     "    "
    ]
   },
@@ -213,8 +213,293 @@
     "#TODO\n",
     "#1 - generate random trees by performing random rotations\n",
     "#2 - read GTP output file\n",
-    "#3 - create list of random trees that are a known distance away from\n",
-    "#    the first tree in the list"
+    "#5 - run GTP on the tree sequence file and and get file with\n",
+    "#    tree distance and the geodesic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#create count nodes\n",
+    "def countNodes(tree):\n",
+    "    if not isinstance(tree,list):\n",
+    "        return 0\n",
+    "    \n",
+    "    return 1 + countNodes(tree[0]) + countNodes(tree[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#perform random SPR move\n",
+    "#PRE: tree is a nested list representation of a tree\n",
+    "#POST: returns a new tree with a random SPR move\n",
+    "#      the resulting tree will have same number of nodes as the\n",
+    "#      initial tree\n",
+    "__prunedbranch__ = []\n",
+    "def randSPR(tree,total_nodes):\n",
+    "    global __prunedbranch__\n",
+    "    targetNode = random.randint(1,total_nodes)\n",
+    "    pruned,n = __prune__(tree,targetNode,0)\n",
+    "    \n",
+    "    if not isinstance(pruned,list):#if the pruned tree is a leaf return the original tree\n",
+    "        return (tree,0) \n",
+    "    \n",
+    "    targetNode = random.randint(1,total_nodes - countNodes(__prunedbranch__) - 1)\n",
+    "    return __regraft__(pruned,targetNode,0)\n",
+    "\n",
+    "\n",
+    "#POST: return a pair of the form (pruned tree, number of visited nodes) and the\n",
+    "#      variable __prunedbranch__ contains the subtree removed from tree\n",
+    "\n",
+    "#Base Cases:\n",
+    "#two kinds of base cases\n",
+    "# 1 cases where no visited node is counted\n",
+    "# like (leaf) or (number of visited nodes== targetNode)\n",
+    "#in this case it returns the tree unmodified and the\n",
+    "#number of visited nodes is not incremented\n",
+    "\n",
+    "# 2 occurs when targetNode is visited\n",
+    "# saves and removes the pruned branch from the node\n",
+    "#other branch is returned so the tree remains complete\n",
+    "#and we count this node as visited\n",
+    "\n",
+    "#the base cases work as we would want\n",
+    "\n",
+    "#Assume __prune__ works for subtree with 1..k nodes\n",
+    "#for a tree having k+1 nodes\n",
+    "#__prune__(tree[0],targetNode,visited_nodes + 1)\n",
+    "#will return the properly pruned left subtree and the correct number of visited nodes\n",
+    "#so __prune__(tree[1],targetNode,visited_nodes1)\n",
+    "#will return the properly pruned right subtree and the correct total of visited nodes\n",
+    "#then [subtree1,subtree2] will be a properly pruned tree and \n",
+    "#visuted_nodes2 will be the total number of visited nodes\n",
+    "def __prune__(tree,targetNode,visited_nodes):\n",
+    "    global __prunedbranch__\n",
+    "    #basecases\n",
+    "    \n",
+    "    #tree is a leaf\n",
+    "    if not isinstance(tree,list):\n",
+    "        return (tree,visited_nodes + 0)#no nodes where visited no pruning\n",
+    "    \n",
+    "    #we don't want to visit any nodes after target node has been reached\n",
+    "    if targetNode == visited_nodes:\n",
+    "        return (tree,visited_nodes + 0)\n",
+    "    \n",
+    "    #(not a leaf) or (target not reached) ==> node visited\n",
+    "    #therefore we count current node as visited and write visited_nodes+1\n",
+    "    \n",
+    "    #node to be pruned\n",
+    "    if  targetNode == visited_nodes+1:\n",
+    "        #save the pruned branch\n",
+    "        whichBranch = random.randint(0,1)\n",
+    "        __prunedbranch__ = tree[whichBranch]\n",
+    "        #return pruned subtree\n",
+    "        return (tree[not whichBranch],visited_nodes+1)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    #recursive step\n",
+    "    subtree1, visited_nodes1 = __prune__(tree[0],targetNode,visited_nodes + 1)\n",
+    "    subtree2, visited_nodes2 = __prune__(tree[1],targetNode,visited_nodes1)\n",
+    "    #visited_nodes2 is the total\n",
+    "    return ([subtree1,subtree2],visited_nodes2)\n",
+    "\n",
+    "\n",
+    "#__regraft__ uses the same logic as __prune__ except it performs a different\n",
+    "#operation on the target node\n",
+    "def __regraft__(tree,targetNode,visited_nodes):\n",
+    "    global __prunedbranch__\n",
+    "    #basecases\n",
+    "    \n",
+    "    #tree is a leaf\n",
+    "    if not isinstance(tree,list):\n",
+    "        return (tree,visited_nodes + 0)#no nodes where visited no pruning\n",
+    "    \n",
+    "    #we don't want to visit any nodes after target node has been reached\n",
+    "    if targetNode == visited_nodes:\n",
+    "        return (tree,visited_nodes + 0)\n",
+    "    \n",
+    "    #(not a leaf) or (target not reached) ==> node visited\n",
+    "    #therefore we count current node as visited and write visited_nodes+1\n",
+    "    \n",
+    "    #attach to edge after targetNode\n",
+    "    if  targetNode == visited_nodes+1:\n",
+    "        if random.randint(0,1) == 0:\n",
+    "            return ([[tree[0],__prunedbranch__],tree[1]],visited_nodes+1)\n",
+    "        else:\n",
+    "            return ([tree[0],[tree[1],__prunedbranch__]],visited_nodes+1)\n",
+    "\n",
+    "    \n",
+    "    #recursive step\n",
+    "    subtree1, visited_nodes1 = __regraft__(tree[0],targetNode,visited_nodes + 1)\n",
+    "    subtree2, visited_nodes2 = __regraft__(tree[1],targetNode,visited_nodes1)\n",
+    "    #visited_nodes2 is the total\n",
+    "    return ([subtree1,subtree2],visited_nodes2)\n",
+    "    \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to create the tree sequence\n",
+    "# 1 generate first tree\n",
+    "# 2 count number of nodes\n",
+    "# 3 tree_{i+1} = randPSR(tree_{i})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0, 1], [[[[[2, 3], 4], [5, [6, [7, 8]]]], 9], [[[10, [11, 12]], [13, 14]], 15]]], [[16, [17, 18]], 19]]\n",
+      "[[[0, 1], [[[[[2, 3], 4], [[5, 8], [6, 7]]], 9], [[[10, [11, 12]], [13, 14]], 15]]], [[16, [17, 18]], 19]]\n",
+      "[[[[0, 1], 11], [[[[[2, 3], 4], [[5, 8], [6, 7]]], 9], [[[10, 12], [13, 14]], 15]]], [[16, [17, 18]], 19]]\n",
+      "[[16, [17, [18, [[[0, 1], 11], [[[[[2, 3], 4], [[5, 8], [6, 7]]], 9], [[[10, 12], [13, 14]], 15]]]]]], 19]\n",
+      "[[16, [17, [[18, [[[0, 1], 11], [[[[[2, 3], 4], [[5, 8], 6]], 9], [[[10, 12], [13, 14]], 15]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[[0, 1], 11], [[[[[[2, 3], 4], [[5, 8], 6]], 9], [[10, 12], 15]], [13, 14]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[[0, 1], 11], [[[[[5, 8], 6], 9], [[10, 12], 15]], [[13, 14], [[2, 3], 4]]]]], 7]]], 19]\n",
+      "[[16, [17, [[[18, 12], [[[0, 1], 11], [[[[[5, 8], 6], 9], [10, 15]], [[13, 14], [[2, 3], 4]]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[[0, 1], 11], [[[[[5, 8], 6], [9, 12]], [10, 15]], [[13, 14], [[2, 3], 4]]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[1, [11, 0]], [[[[[5, 8], 6], [9, 12]], [10, 15]], [[13, 14], [[2, 3], 4]]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[1, [[11, 3], 0]], [[[[[5, 8], 6], [9, 12]], [10, 15]], [[13, 14], [2, 4]]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[1, [[[11, 3], 0], 14]], [[[[[5, 8], 6], [9, 12]], [10, 15]], [13, [2, 4]]]]], 7]]], 19]\n",
+      "[[16, [17, [[18, [[1, [[[11, 3], [0, 15]], 14]], [[[[[5, 8], 6], [9, 12]], 10], [13, [2, 4]]]]], 7]]], 19]\n",
+      "[[[16, [18, [[1, [[[11, 3], [0, 15]], 14]], [[[[[5, 8], 6], [9, 12]], 10], [13, [2, 4]]]]]], [17, 7]], 19]\n",
+      "[[[16, [18, [[1, [[[11, 3], [0, 15]], 14]], [[[[[5, 8], 6], 12], [10, 9]], [13, [2, 4]]]]]], [17, 7]], 19]\n",
+      "[[[16, [[18, [[1, [[[11, 3], [0, 15]], 14]], [[[[5, 8], 6], [10, 9]], [13, [2, 4]]]]], 12]], [17, 7]], 19]\n",
+      "[[[16, [[[18, [[1, [[0, 15], 14]], [[[[5, 8], 6], [10, 9]], [13, [2, 4]]]]], 12], [11, 3]]], [17, 7]], 19]\n",
+      "[[[16, [[[18, 12], [11, 3]], [[1, [[0, 15], 14]], [[[[5, 8], 6], [10, 9]], [13, [2, 4]]]]]], [17, 7]], 19]\n",
+      "[[[16, [[[18, 12], [11, 3]], [[[[5, 8], 6], [10, [9, [1, [[0, 15], 14]]]]], [13, [2, 4]]]]], [17, 7]], 19]\n",
+      "[[[16, [[[18, 12], [11, 3]], [[6, [[10, [9, [1, [[0, 15], 14]]]], [5, 8]]], [13, [2, 4]]]]], [17, 7]], 19]\n",
+      "[[[16, [[[[18, 12], 9], [11, 3]], [[6, [[10, [1, [[0, 15], 14]]], [5, 8]]], [13, [2, 4]]]]], [17, 7]], 19]\n",
+      "[[[16, [[[[18, 12], 9], 3], [[6, [[[10, [1, [[0, 15], 14]]], 11], [5, 8]]], [13, [2, 4]]]]], [17, 7]], 19]\n",
+      "[[[16, [[[[18, 12], 9], 3], [[6, [[[10, [1, [[0, 15], 14]]], [11, [2, 4]]], [5, 8]]], 13]]], [17, 7]], 19]\n",
+      "[[[[16, 14], [[[[18, 12], 9], 3], [[6, [[[10, [1, [0, 15]]], [11, [2, 4]]], [5, 8]]], 13]]], [17, 7]], 19]\n",
+      "[[[[16, 14], [[[[[18, [0, 15]], 12], 9], 3], [[6, [[[10, 1], [11, [2, 4]]], [5, 8]]], 13]]], [17, 7]], 19]\n",
+      "[[[14, [[[[[18, [0, 15]], 12], 9], 3], [[6, [[[10, 1], [11, [2, 4]]], [5, [8, 16]]]], 13]]], [17, 7]], 19]\n",
+      "[[[14, [[[[[18, [0, 15]], 12], 9], 3], [[6, [[1, [11, [2, 4]]], [5, [[8, 10], 16]]]], 13]]], [17, 7]], 19]\n",
+      "[[[14, [[[12, 9], 3], [[6, [[1, [[11, [18, [0, 15]]], [2, 4]]], [5, [[8, 10], 16]]]], 13]]], [17, 7]], 19]\n",
+      "[[[14, [[6, [[1, [[11, [18, [0, 15]]], [[2, 4], [[12, 9], 3]]]], [5, [[8, 10], 16]]]], 13]], [17, 7]], 19]\n",
+      "[[[14, [[6, [[1, [[11, [0, 15]], [[2, 4], [[12, 9], 3]]]], [5, [[8, 10], 16]]]], 13]], [17, [7, 18]]], 19]\n",
+      "[[[14, [[6, [[1, [[11, [[0, 15], 7]], [[2, 4], [[12, 9], 3]]]], [5, [[8, 10], 16]]]], 13]], [17, 18]], 19]\n",
+      "[[[14, [[6, [[1, [[11, [[[0, 15], [[12, 9], 3]], 7]], [2, 4]]], [5, [[8, 10], 16]]]], 13]], [17, 18]], 19]\n",
+      "[[[14, [[6, [[1, [[11, [[0, 15], [[12, 9], 3]]], [2, [4, 7]]]], [5, [[8, 10], 16]]]], 13]], [17, 18]], 19]\n",
+      "[[[14, [[6, [[1, [[11, [[0, 15], [12, 3]]], [[2, [4, 7]], 9]]], [5, [[8, 10], 16]]]], 13]], [17, 18]], 19]\n",
+      "[[[[6, [[1, [[11, [[0, 15], [12, 3]]], [[2, [4, 7]], 9]]], [5, [[8, 10], 16]]]], 13], [17, 18]], [19, 14]]\n",
+      "[[[6, [[1, [[11, [[0, 15], [12, 3]]], [[2, [4, 7]], 9]]], [5, [[8, 10], 16]]]], [13, [17, 18]]], [19, 14]]\n",
+      "[[[6, [[1, [[11, [[[0, 15], [12, 3]], 8]], [[2, [4, 7]], 9]]], [5, [10, 16]]]], [13, [17, 18]]], [19, 14]]\n",
+      "[[[6, [[1, [[11, [[0, [12, 3]], 8]], [[2, [4, 7]], [9, 15]]]], [5, [10, 16]]]], [13, [17, 18]]], [19, 14]]\n",
+      "[[[6, [[1, [[11, [[0, [12, 3]], 8]], [[2, [4, 7]], [9, 15]]]], [5, [10, 16]]]], [[13, [17, 18]], 19]], 14]\n",
+      "[[[6, [[[1, [[11, [[0, [12, 3]], 8]], [9, 15]]], [2, [4, 7]]], [5, [10, 16]]]], [[13, [17, 18]], 19]], 14]\n",
+      "[[[6, [[[1, [[11, [[0, [12, 3]], 8]], [9, 15]]], [2, 7]], [5, [10, [16, 4]]]]], [[13, [17, 18]], 19]], 14]\n",
+      "[[[6, [[[1, [[11, [[[0, [12, 3]], 7], 8]], [9, 15]]], 2], [5, [10, [16, 4]]]]], [[13, [17, 18]], 19]], 14]\n",
+      "[[[6, [[[[1, [[11, [[0, [12, 3]], 8]], [9, 15]]], 2], [5, [10, [16, 4]]]], 7]], [[13, [17, 18]], 19]], 14]\n",
+      "[[[6, [[[[1, [[11, [0, [12, 3]]], [9, 15]]], 2], [5, [10, [16, 4]]]], 7]], [[[13, 8], [17, 18]], 19]], 14]\n",
+      "[[[6, [[[[1, [11, [9, 15]]], 2], [5, [10, [16, 4]]]], 7]], [[[13, 8], [17, [18, [0, [12, 3]]]]], 19]], 14]\n",
+      "[[[6, [[[[1, [11, [9, 15]]], 2], [5, [10, [16, [4, [[13, 8], [17, [18, [0, [12, 3]]]]]]]]]], 7]], 19], 14]\n",
+      "[[[6, [[[[1, [11, [9, 15]]], 2], [5, [10, [4, [[[13, 8], [17, [18, [0, [12, 3]]]]], 16]]]]], 7]], 19], 14]\n",
+      "[[[6, [[[[1, [11, 9]], 2], [5, [10, [4, [[[13, 8], [17, [18, [[0, 15], [12, 3]]]]], 16]]]]], 7]], 19], 14]\n",
+      "[[[6, [[2, [5, [10, [4, [[[13, 8], [17, [18, [[0, [15, [1, [11, 9]]]], [12, 3]]]]], 16]]]]], 7]], 19], 14]\n",
+      "[[[6, [[2, 5], 7]], 19], [14, [10, [4, [[[13, 8], [17, [18, [[0, [15, [1, [11, 9]]]], [12, 3]]]]], 16]]]]]\n",
+      "[[[[2, 5], 7], 19], [14, [10, [4, [[[13, 8], [17, [18, [[0, [15, [1, [[11, 9], 6]]]], [12, 3]]]]], 16]]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_tree = genRandBinTree(range(20))\n",
+    "print(rand_tree)\n",
+    "current_tree = rand_tree\n",
+    "for i in range(50):\n",
+    "    current_tree = randSPR(current_tree,countNodes(rand_tree))[0]\n",
+    "    print(current_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countNodes(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1)\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(__prune__([[1,2],3],1,0))\n",
+    "print(__prunedbranch__)"
    ]
   },
   {
