Adds tree equality Algorithm based on AHU

--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -201,6 +201,33 @@
     "    for subtree in tree:\n",
     "        ntree += toNewickSubTree(subtree) + \",\"\n",
     "    return ntree[0:-1] + \")\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#compare two trees using variation of AHU algorithm\n",
+    "#for every node or leaf at every level\n",
+    "#the sorted nodes must be the same\n",
+    "def Tree_Signature(tree):\n",
+    "    if not isinstance(tree,list):\n",
+    "        return str(tree)\n",
+    "    \n",
+    "    lst_subtrees = []\n",
+    "    for subtree in tree:\n",
+    "        lst_subtrees.append(Tree_Signature(subtree))\n",
+    "    \n",
+    "    sorted_subtrees = sorted(lst_subtrees)\n",
+    "    return \"[\" + str(sorted_subtrees) + \"]\"\n",
+    "\n",
+    "\n",
+    "#this tree signature is acomplete invariant among equal trees\n",
+    "#threfore tree1 = tree2 "
    ]
   },
   {
@@ -234,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -482,6 +509,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -493,21 +540,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
