--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -10,6 +10,7 @@
    "source": [
     "import random\n",
     "from math import ceil\n",
+    "from math import factorial\n",
     "random.seed()\n",
     "\n",
     "#partitions lst\n",
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +228,13 @@
     "\n",
     "\n",
     "#this tree signature is acomplete invariant among equal trees\n",
-    "#threfore tree1 = tree2 "
+    "#threfore tree1 = tree2 iff Tree_Signature(tree1) = Tree_Signature(tree2)\n",
+    "def treeEq(tree1,tree2):\n",
+    "    return Tree_Signature(tree1) == Tree_Signature(tree2)\n",
+    "\n",
+    "#compte catalan number\n",
+    "def catalan(n):\n",
+    "    return factorial(2*n) / (factorial(n+1)*factorial(n))"
    ]
   },
   {
@@ -509,7 +516,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#test that random SPR sequence works\n",
+    "#count the number of different tree signatures\n",
+    "\n",
+    "rand_tree = genRandBinTree([1,2,3,4])\n",
+    "total_nodes = countNodes(rand_tree)\n",
+    "tree_dict = {}\n",
+    "tree_dict[Tree_Signature(rand_tree)]=1\n",
+    "\n",
+    "current_tree = rand_tree\n",
+    "for i in range(100):\n",
+    "    current_tree = randSPR(current_tree,total_nodes)[0]\n",
+    "    #add to dictionary\n",
+    "    signature = Tree_Signature(current_tree)\n",
+    "    tree_dict[signature] = tree_dict.get(signature,0) + 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -517,15 +549,30 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "['[[\\'3\\', \\'[[\\\\\\'4\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'2\\\\\\']]\"]]\\']]',\n",
+       " '[[\"[[\\'1\\', \\'4\\']]\", \"[[\\'2\\', \\'3\\']]\"]]',\n",
+       " '[[\"[[\\'1\\', \\'3\\']]\", \"[[\\'2\\', \\'4\\']]\"]]',\n",
+       " '[[\\'1\\', \\'[[\\\\\\'3\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'1\\', \\'[[\\\\\\'4\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'2\\', \\'[[\\\\\\'3\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
+       " '[[\"[[\\'1\\', \\'2\\']]\", \"[[\\'3\\', \\'4\\']]\"]]',\n",
+       " '[[\\'3\\', \\'[[\\\\\\'1\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'4\\', \\'[[\\\\\\'3\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'2\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'4\\', \\'[[\\\\\\'1\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'3\\', \\'[[\\\\\\'2\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'4\\', \\'[[\\\\\\'2\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'2\\', \\'[[\\\\\\'4\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
+       " '[[\\'2\\', \\'[[\\\\\\'1\\\\\\', \"[[\\\\\\'3\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "tree_dict.keys()"
+   ]
   },
   {
    "cell_type": "code",
