adds terminal runable python file to create random SPR walks and run GTP on each SPR walk file

--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -576,6 +576,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running: 0\n",
+      "running: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2):\n",
+    "    print(\"running: \" + str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
