--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -11,6 +11,7 @@
     "import random\n",
     "from math import ceil\n",
     "from math import factorial\n",
+    "from math import sqrt\n",
     "random.seed()\n",
     "\n",
     "#partitions lst\n",
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -201,12 +202,15 @@
     "    ntree = \"(\"\n",
     "    for subtree in tree:\n",
     "        ntree += toNewickSubTree(subtree) + \",\"\n",
-    "    return ntree[0:-1] + \")\""
+    "    return ntree[0:-1] + \")\"\n",
+    "\n",
+    "def newickToNestedLst(newick_tree):\n",
+    "    return eval(newick_tree.replace(\":1\",\"\").replace(\"(\",\"[\").replace(\")\",\"]\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -422,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +437,7 @@
        "0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,13 +520,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#test that random SPR sequence works\n",
+    "#check that random SPR sequence works\n",
     "#count the number of different tree signatures\n",
     "\n",
     "rand_tree = genRandBinTree([1,2,3,4])\n",
@@ -541,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -549,50 +553,91 @@
     {
      "data": {
       "text/plain": [
-       "['[[\\'3\\', \\'[[\\\\\\'4\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'2\\\\\\']]\"]]\\']]',\n",
-       " '[[\"[[\\'1\\', \\'4\\']]\", \"[[\\'2\\', \\'3\\']]\"]]',\n",
-       " '[[\"[[\\'1\\', \\'3\\']]\", \"[[\\'2\\', \\'4\\']]\"]]',\n",
-       " '[[\\'1\\', \\'[[\\\\\\'3\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'1\\', \\'[[\\\\\\'4\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'2\\', \\'[[\\\\\\'3\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
-       " '[[\"[[\\'1\\', \\'2\\']]\", \"[[\\'3\\', \\'4\\']]\"]]',\n",
-       " '[[\\'3\\', \\'[[\\\\\\'1\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'4\\', \\'[[\\\\\\'3\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'2\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'4\\', \\'[[\\\\\\'1\\\\\\', \"[[\\\\\\'2\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'3\\', \\'[[\\\\\\'2\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'4\\', \\'[[\\\\\\'2\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'2\\', \\'[[\\\\\\'4\\\\\\', \"[[\\\\\\'1\\\\\\', \\\\\\'3\\\\\\']]\"]]\\']]',\n",
-       " '[[\\'2\\', \\'[[\\\\\\'1\\\\\\', \"[[\\\\\\'3\\\\\\', \\\\\\'4\\\\\\']]\"]]\\']]']"
+       "15"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tree_dict.keys()"
+    "len(tree_dict.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "import csv\n",
+    "#get number of nodes from file\n",
+    "with open(\"sprseq\",\"r\") as seq:\n",
+    "    newick_tree = seq.readline()\n",
+    "    tree = newickToNestedLst(newick_tree)\n",
+    "    number_nodes = countNodes(tree)\n",
+    "\n",
+    "max_dist = 2*sqrt(number_nodes)\n",
+    "\n",
+    "count_steps=0\n",
+    "with open(\"seqdist.csv\", 'r') as distfile:\n",
+    "    dist_reader = csv.reader(distfile,delimiter='\\t')\n",
+    "\n",
+    "    for row in dist_reader:\n",
+    "        #row 2 is the geo distance\n",
+    "        if float(row[2]) > (max_dist * 0.9):\n",
+    "            break\n",
+    "            \n",
+    "        count_steps+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running: 0\n",
-      "running: 1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(2):\n",
-    "    print(\"running: \" + str(i))"
+    "number_nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, [2, 3]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(newick_tree.replace(\":1\",\"\").replace(\"(\",\"[\").replace(\")\",\"]\"))"
    ]
   },
   {
