--- a/Rand_Trees.ipynb
+++ b/Rand_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -128,22 +128,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#generates a binary tree\n",
-    "def genRandBinTree(leaves):\n",
+    "def genRandBinTreeWithPartitions(leaves):\n",
     "    if len(leaves) < 2:\n",
     "        return leaves[0]\n",
     "    \n",
     "    subtree=[]\n",
     "    for part in randBinPart(leaves):\n",
-    "        subtree.append(genRandBinTree(part))\n",
+    "        subtree.append(genRandBinTreeWithPartitions(part))\n",
     "    \n",
-    "    return subtree"
+    "    return subtree\n",
+    "\n",
+    "#generates a binary tree\n",
+    "def genRandBinTree(leaves):\n",
+    "    \n",
+    "    while len(leaves) > 1:\n",
+    "        #pick two random elements\n",
+    "        a = random.randint(0,len(leaves)-1)\n",
+    "        sibling1 = leaves[a]\n",
+    "        del leaves[a]\n",
+    "        b = random.randint(0,len(leaves)-1)\n",
+    "        sibling2 = leaves[b]\n",
+    "        del leaves[b]\n",
+    "        \n",
+    "        leaves.append([sibling1,sibling2])\n",
+    "        \n",
+    "    return leaves[0]"
    ]
   },
   {
@@ -179,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -520,32 +536,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total_nodes = 5 no. distinct trees =  944\n"
+     ]
+    }
+   ],
    "source": [
     "#check that random SPR sequence works\n",
     "#count the number of different tree signatures\n",
     "\n",
-    "rand_tree = genRandBinTree([1,2,3,4])\n",
+    "rand_tree = genRandBinTree([1,2,3,4,5,6])\n",
     "total_nodes = countNodes(rand_tree)\n",
     "tree_dict = {}\n",
     "tree_dict[Tree_Signature(rand_tree)]=1\n",
     "\n",
     "current_tree = rand_tree\n",
-    "for i in range(100):\n",
+    "for i in range(10000):\n",
     "    current_tree = randSPR(current_tree,total_nodes)[0]\n",
     "    #add to dictionary\n",
     "    signature = Tree_Signature(current_tree)\n",
     "    tree_dict[signature] = tree_dict.get(signature,0) + 1\n",
-    "\n"
+    "\n",
+    "print(\"total_nodes =\",total_nodes,\"no. distinct trees = \",len(tree_dict.keys()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, [2, 3]]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -556,14 +639,12 @@
        "15"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(tree_dict.keys())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -653,21 +734,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
